--- a/src/Beastiepedia/Info/MoveList.module.css
+++ b/src/Beastiepedia/Info/MoveList.module.css
@@ -64,6 +64,7 @@
 
 .viewcontainer {
   max-width: 100%;
+  width: 460px;
   margin: 6px 0 4px 0;
   width: 460px;
   flex: 1 1;
